# backend/src/models/review.model.js
@@ -4,26 +4,26 @@ const reviewSchema = new mongoose.Schema({
     productID: {
         type: mongoose.Schema.Types.ObjectId,
         ref: "Product",
-        require: [true, "The product is required"]
+        required: [true, "The product is required"]
     },
     userID: {
         type: mongoose.Schema.Types.ObjectId,
         ref: "User",
-        require: [true, "The user is required"]
+        required: [true, "The user is required"]
     },
     stars: {
         type: Number,
-        require: [true, "The rating is required"],
+        required: [true, "The rating is required"],
         trim: true
     },
     title: {
         type: String,
-        require: [true, "The title is required"],
+        required: [true, "The title is required"],
         trim: true
     },
     comment: {
         type: String,
-        require: [true, "The comment is required"],
+        required: [true, "The comment is required"],
         trim: true
     }
 }, { timestamps: true });
